--- a/start.html
+++ b/start.html
@@ -9,16 +9,25 @@
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
     <title>Gleisplan</title>
     <link rel="stylesheet" href="start.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">-->
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script> -->
+    <link rel="stylesheet" href="dev/bootstrap-5.2.2/bootstrap-icons.css">
+	<link href="dev/bootstrap-5.2.2/css/bootstrap.min.css" rel="stylesheet">
+	<script src="dev/bootstrap-5.2.2/js/bootstrap.bundle.min.js"></script>
+	<script src="dev/jquery-3.6.1.js"></script> 
+	<script src="dev/createjs.js"></script>
+
+
+
+
     <script src="code/preLoader.js"></script>
     <script src="code/signaling.js"></script>
 
@@ -79,9 +88,6 @@
         </div>
         <div id="CanvasContainer">
             <div id="sidebar" class="toggled">
-
-
-
                 <div class="accordion  accordion-flush" id="newItemMenu">
                     <div class="accordion-item">
                         <h4 class="accordion-header" id="headingOne">
@@ -92,12 +98,7 @@
                         </h4>
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                             data-bs-parent="#newItemMenu">
-                            <div class="accordion-body">
-                                <button id="new_ks" data-signal="ks_hp" style="background-image: url(signal.png);"
-                                    class="newItem"></button>
-
-                                <button id="new_hv" data-signal="hv" style="background-image: url();"
-                                    class="newItem"></button>
+                            <div class="accordion-body">                               
 
                             </div>
                         </div>
@@ -113,13 +114,7 @@
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                             data-bs-parent="#newItemMenu">
                             <div class="accordion-body">
-                                <button id="new_ks1" data-signal="ks_vr" style="background-image: url(signal.png);"
-                                    class="newItem">
-                                </button>
-                                <div id="new_hv" data-signal="ks" style="background-image: url(signal.png);" class="">
-                                </div>
-                                <div id="new_hl" data-signal="ks" style="background-image: url(signal.png);" class="">
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
