work in progress

--- a/start.html
+++ b/start.html
@@ -78,6 +78,9 @@
         <button id="btnImage" type="button" class="btn btn-secondary btn-sm" title="Ansicht als Bild herunterladen">
             <i class="bi bi-camera"></i>
         </button>
+        <button id="btnTexture" type="button" class="btn btn-secondary btn-sm" title="Echte Schienen anzeigen">
+            <i class="bi bi-emoji-sunglasses-fill"></i>
+        </button>
         <!-- <button id="btnSignal" type="button" class="btn btn-secondary btn-sm" data-bs-container="body"
                 data-bs-placement="bottom">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
